# python-self-study

./: .coverage  .gitignore  README.md  calculator.py  check_age.py  for_loop.py  guess_num.py  guess_number.py  hannot.py  hello.py  poker.py  pyproject.toml  t.py  test.txt  variables.py  variables_1.py
docs/daily/2025-11-27/: 2025-11-27.md
docs/daily/2025-11-30/: 2025-11-30.md
tests/: test_check_age.py  test_for_loop.py  test_guess_number.py  test_hello.py  test_variables.py  test_variables_1.py
