[project]
name = "python-self-study"
version = "0.1.0"
description = ""
authors = [
    {name = "cqw1896",email = "cqw1896@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "python_self_study", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
