[project]
name = "python-self-study"
version = "0.1.0"
description = ""
authors = [
    {name = "cqw1896",email = "cqw1896@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black (>=25.11.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pre-commit (>=4.5.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "python_self_study", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
